# backend/docs/swagger.json
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/transactions/:id": {
+        "/transactions/{id}": {
             "get": {
                 "description": "Rota para capturar uma nova transação",
                 "consumes": [
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/transactions/:id/:currency": {
+        "/transactions/{id}/{currency}": {
             "get": {
                 "description": "Rota para capturar uma transação com a taxa da câmbio",
                 "consumes": [
